--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -39,6 +39,9 @@
         <action icon="/assets/notification.png" class="ir.edmp.mqlplugin.actions.NotificationAction" id="addnotificationscript" text="Notification">
             <add-to-group group-id="MQLMenu" anchor="last"/>
         </action>
+        <action icon="/assets/handler.png" class="ir.edmp.mqlplugin.actions.SystemHandlerAction" id="addsystemhandlerscript" text="System Handler">
+            <add-to-group group-id="MQLMenu" anchor="last"/>
+        </action>
     </actions>
     <extensions defaultExtensionNs="com.intellij">
         <postStartupActivity implementation="ir.edmp.mqlplugin.listener.startup.PropertiesFile"/>
